--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
-                <h1 class="m-0 display-4 text-uppercase text-white">KOPPEE</h1>
+                <h1 class="m-0 display-4 text-uppercase text-white">STEVEN AGUAS</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
                     <a href="service.html" class="nav-item nav-link"></a>
                     <a href="menu.html" class="nav-item nav-link"></a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"></a>
                         <div class="dropdown-menu text-capitalize">
                             <a href="reservation.html" class="dropdown-item"></a>
                             <a href="testimonial.html" class="dropdown-item"></a>
@@ -63,9 +63,9 @@
                 <div class="carousel-item active">
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
-                        <h1 class="display-1 text-white m-0">COFFEE</h1>
-                        <h2 class="text-white m-0">* SINCE 1950 *</h2>
+                        <h2 class="text-primary font-weight-medium m-0">EXAMEN INTERCICLO</h2>
+                        <h1 class="display-1 text-white m-0">CLOUD COMPUTING</h1>
+                        <h2 class="text-white m-0">* Steven Aguas *</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
