--- a/index.html
+++ b/index.html
@@ -98,21 +98,17 @@
             <div class="row">
                 <div class="col-lg-4 py-0 py-lg-5">
                     <h1 class="mb-3"></h1>
-                    <p>La computación en la nube (o cloud computing) es una tecnología que permite acceso remoto a servicios de software, almacenamiento y procesamiento de datos a través de Internet 1.</p>
-                    <a href="" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Learn More</a>
+                    <p>La computación en la nube (o cloud computing) es una tecnología que permite acceso remoto a servicios de software, almacenamiento y procesamiento de datos a través de Internet 1. En otras palabras, la computación en la nube es una aplicación de software que atiende a diversos clientes y ofrece servicios a través de la conectividad y gran escala de Internet.</p>
                 </div>
                 <div class="col-lg-4 py-5 py-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100" src="img/about.png" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100" src="img/clodd.png" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-4 py-0 py-lg-5">
-                    <h1 class="mb-3">Our Vision</h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
-                    <a href="" class="btn btn-primary font-weight-bold py-2 px-4 mt-2">Learn More</a>
+                    <h1 class="mb-3">Que es Virtualización</h1>
+                    <p>La virtualización es un proceso que permite dividir los recursos de hardware de un sistema entre varios sistemas virtuales, denominados máquinas virtuales (VM). Con la virtualización, se puede aprovechar más eficazmente el hardware físico, gestionar más sencillamente los servicios y escalar más rápido los recursos.</p>
+
                 </div>
             </div>
         </div>
