--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/IaaS-1920x1883.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-truck service-icon"></i>¿Que es IaaS?</h4>
+                            <h4><i class=""></i>¿Que es IaaS?</h4>
                             <p class="m-0">La Infraestructura como servicio (IaaS) se aleja un poco de la infraestructura local. Se trata de un servicio de pago según el consumo, donde un tercero le presta los servicios de infraestructura, como el almacenamiento y la virtualización, cuando los necesita, a través de la nube o de Internet. </p>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/OIP.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-coffee service-icon"></i>¿Que es PaaS?</h4>
+                            <h4><i class=""></i>¿Que es PaaS?</h4>
                             <p class="m-0">La Plataforma como servicio (PaaS) se aleja un poco más de la gestión completa de la infraestructura local. En este caso, el proveedor aloja el hardware y el software en su propia infraestructura y ofrece la plataforma al usuario como una solución integrada, una pila de soluciones o un servicio a través de Internet.</p>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/io.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-award service-icon"></i>¿Que es SaaS?</h4>
+                            <h4><i class=""></i>¿Que es SaaS?</h4>
                             <p class="m-0">El software como servicio (SaaS), también conocido como servicios de aplicaciones en la nube, es la más completa de las opciones de cloud computing. Ofrece una aplicación integral que gestiona el proveedor, a través de un explorador web. </p>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/doc.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-table service-icon"></i>¿Que es un Docker?</h4>
+                            <h4><i class=""></i>¿Que es un Docker?</h4>
                             <p class="m-0">Docker es una plataforma diseñada para ayudar a los desarrolladores a construir, compartir y ejecutar aplicaciones en contenedores1. Docker maneja la configuración tediosa, por lo que puedes concentrarte en el código.</p>
                         </div>
                     </div>
@@ -173,24 +173,6 @@
     </div>
     <!-- Service End -->
 
-
-    <!-- Offer Start -->
-    <div class="offer container-fluid my-5 py-5 text-center position-relative overlay-top overlay-bottom">
-        <div class="container py-5">
-            <h1 class="display-3 text-primary mt-3">50% OFF</h1>
-            <h1 class="text-white mb-3">Sunday Special Offer</h1>
-            <h4 class="text-white font-weight-normal mb-4 pb-3">Only for Sunday from 1st Jan to 30th Jan 2045</h4>
-            <form class="form-inline justify-content-center mb-4">
-                <div class="input-group">
-                    <input type="text" class="form-control p-4" placeholder="Your Email" style="height: 60px;">
-                    <div class="input-group-append">
-                        <button class="btn btn-primary font-weight-bold px-4" type="submit">Sign Up</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-    <!-- Offer End -->
 
 
     <!-- Menu Start -->
